--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -42,7 +42,7 @@
         {% assign sorted_pages = site.pages | sort:"order" %}
           <ul>
         {% for node in sorted_pages %}
-          <li><a href="{{node.url | split: "" | reverse | join: "" | slice: 5}}">{{node.title}}</a></li>
+          <li><a href="{{node.url | split: "" | reverse | join: "" | slice: 5, 100}}">{{node.title}}</a></li>
         {% endfor %}
           </ul>
       {{ content }}
